fix button in overlay on mobile

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -108,7 +108,7 @@
 .dropdown-item .Button {
   height: 34px;
   line-height: 36px;
-  padding: 0 20px;
+  padding: 0 20px !important;
   font-size: 13px;
   min-width: 0;
   float: right;
